# ClionUnitTest

./: CMakeLists.txt  README.md  main.cpp
Src/: CMakeLists.txt  Foo.cpp  Foo.hpp
Src/Include/: Foo.hpp  Singleton.hpp
Src/Source/: Foo.cpp  Singleton.cpp
Tests/: CMakeLists.txt  MockFoo.hpp  mocktest.cpp  singletontest.cpp  test.cpp
Tests/lib/googletest-1.8.0/googlemock/: CMakeLists.txt  CONTRIBUTORS  Makefile.am  README.md
Tests/lib/googletest-1.8.0/googlemock/docs/: CookBook.md  DesignDoc.md  FrequentlyAskedQuestions.md
Tests/lib/googletest-1.8.0/googlemock/docs/v1_5/: CookBook.md  FrequentlyAskedQuestions.md
Tests/lib/googletest-1.8.0/googlemock/docs/v1_6/: CookBook.md  FrequentlyAskedQuestions.md
Tests/lib/googletest-1.8.0/googlemock/docs/v1_7/: CookBook.md  FrequentlyAskedQuestions.md
Tests/lib/googletest-1.8.0/googlemock/make/: Makefile
Tests/lib/googletest-1.8.0/googlemock/scripts/generator/: LICENSE  README  README.cppclean
Tests/lib/googletest-1.8.0/googletest/: CONTRIBUTORS  README.md
Tests/lib/googletest-1.8.0/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_XcodeGuide.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md
Tests/lib/googletest-1.8.0/googletest/make/: Makefile
